--- a/src/components/css/estilo.css
+++ b/src/components/css/estilo.css
@@ -27,7 +27,6 @@
     background: linear-gradient(to right, red , yellow);
 }
   
-  
 .description-x{
     text-align: justify;
     margin-top: 5%;
@@ -36,6 +35,11 @@
     font-weight: 300;
 }
 
+.subdescription{
+    margin-top: 5%;
+    text-align: justify;
+    font-weight: 300;
+}
 
 img {
     margin-left: -30%;
@@ -70,5 +74,38 @@ img {
     }
     .container {
         padding: 4px;
+    }
+}
+/* .row-x{
+    margin-top: 7%;
+} */
+.column {
+    float: left;
+    width: 33.3%;
+    margin-bottom: 16px;
+    padding: 0 8px;
+    margin-top: 6%;
+}
+.card {
+    margin: 8px;
+}
+
+
+.card-container {
+    padding: 0 16px;
+}
+
+.card-container::after,
+.row::after {
+    content: "";
+    clear: both;
+    display: table;
+}
+
+
+@media screen and (max-width: 650px) {
+    .column {
+        width: 100%;
+        display: block;
     }
 }
