--- a/src/components/css/estilo.css
+++ b/src/components/css/estilo.css
@@ -109,3 +109,56 @@ img {
         display: block;
     }
 }
+
+/******************************* contact ***********************************/
+.container-contact {
+    border-radius: 5px;
+    padding: 20px;
+}
+
+.form-contact {
+    margin-left: 46%;
+    margin-right: -6%;
+}
+
+input[type=text], select, textarea {
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    margin-top: 6px;
+    margin-bottom: 16px;
+}
+
+input[type=submit] {
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+
+button {
+    background-color: #4CAF50;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    cursor: pointer;
+    width: 100%;
+}
+
+button:hover {
+    opacity: 0.8;
+}
+
+@media screen and (max-width: 650px) {
+    .form-contact {
+        margin-left: -2%; 
+        margin-right: -6%; 
+        margin-top: 30%; 
+        
+    }
+}
